<resources>
    <string name="app_name">FarmaCumplido</string>
    <string name="Actualizar_proveedor">actualizar proveedor</string>
    <string name="siguiente">siguiente</string>
    <string name="actualizar_proveedor">Actualizar Proveedor</string>
    <string name="idproveedor">idProveedor</string>
    <string name="nombre_proveedor">nombre proveedor</string>
    <string name="id_proveedor">id proveedor</string>
    <string name="actualizar_proveedor2">actualizar proveedor</string>
    <string name="borrar_proveedor">BORRAR PROVEEDOR</string>
    <string name="borrar_proveedor2">borrar proveedor</string>
    <string name="item_proveedor2">item proveedor</string>
    <string name="lista_de_medicamentos">LISTA DE MEDICAMENTOS</string>
    <string name="todo">TODO</string>
    <string name="precio">Precio:</string>
    <string name="proveedor">Proveedor</string>
    <string name="nombre_medicamento">Nombre medicamento:</string>
    <string name="nuevo_medicamento">NUEVO MEDICAMENTO</string>
    <string name="preciomedicamento">precio:</string>
    <string name="nombre">Nombre:</string>
    <string name="guardar_medicamento">guardar medicamento</string>
    <string name="nombre_medicamentod">Nombre Medicamento</string>
    <string name="precio_medicamento">Precio Medicamento</string>
    <string name="id_proveedor_medicamento">Id Proveedor Medicamento</string>
    <string name="nuevo_proveedor">nuevo proveedor</string>
    <string name="borrar_proveedo">borrar Proveedor</string>
    <string name="actualizar_proveedo">Actualizar proveedor</string>
    <string name="mostrar_medicamentos">Mostrar Medicamentos</string>
    <string name="nuevo_proveedorn">NUEVO PROVEEDOR</string>
    <string name="nombrepro">NOMBRE</string>
    <string name="guardar_proveedor">guardar proveedor</string>
    <string name="detalle_del_medicamento">DETALLE DEL MEDICAMENTO</string>
    <string name="todo2">TODO</string>
    <string name="item_proveedor">item proveedor</string>
    <string name="todo3">TODO</string>
    <string name="mostrar_farmacia">MOSTRAR FARMACIA</string>
    <string name="farmacumplido">FarmaCumplido</string>
</resources>