<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_medicamento"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/medicamentoimagen"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nombrem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_medicamento"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_preciom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precio" />

            <TextView
                android:id="@+id/txt_proveedorm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proveedor" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>