<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="148dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medicamentoimagen"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_detalle_nombrem"
        android:layout_width="319dp"
        android:layout_height="51dp"
        android:layout_marginTop="56dp"
        android:text="@string/nombre_medicamentod"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_detalle_precio"
        android:layout_width="317dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text="@string/precio_medicamento"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_nombrem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_nombrem"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_nombrem" />

    <TextView
        android:id="@+id/txt_detalle_idproveedor"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/id_proveedor_medicamento"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_detalle_precio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_detalle_precio"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_precio" />
</androidx.constraintlayout.widget.ConstraintLayout>