<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58709F">

    <TextView
        android:id="@+id/txt_actualizar_proveedor2"
        android:layout_width="216dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/actualizar_proveedor"
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edt_actualizarid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/idproveedor"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_actualizar_proveedor2"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_actualizar_proveedor2" />

    <EditText
        android:id="@+id/edt_actualizarid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/id_proveedor"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_actualizar_proveedor2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edt_actualizarid"
        app:layout_constraintTop_toBottomOf="@+id/txt_actualizar_proveedor2" />

    <TextView
        android:id="@+id/edt_actualizarnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:text="@string/nombre_proveedor"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_actualizarid"
        app:layout_constraintStart_toStartOf="@+id/edt_actualizarid"
        app:layout_constraintTop_toBottomOf="@+id/edt_actualizarid" />

    <EditText
        android:id="@+id/edt_actualizarnombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre_proveedor"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_actualizarid2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edt_actualizarid2"
        app:layout_constraintTop_toBottomOf="@+id/edt_actualizarid2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:onClick="actualizarProveedor"
        android:text="@string/actualizar_proveedor2"
        app:backgroundTint="#8BC34A"
        app:layout_constraintEnd_toEndOf="@+id/edt_actualizarnombre2"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toEndOf="@+id/edt_actualizarnombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_actualizarnombre2" />
</androidx.constraintlayout.widget.ConstraintLayout>